--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
   <app-header></app-header>
+  <app-generalidades></app-generalidades>
+  <app-experiencia></app-experiencia>
+  <app-educacion></app-educacion>
+  <app-soft-skills></app-soft-skills>
+  <app-proyectos></app-proyectos>
+  <app-mas-informacion></app-mas-informacion>
 </body>
 </html>
