--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,1 +1,2 @@
-<img src="../../assets/banner-ok-argentina-programa.jpg" alt="LogoAP">
+<img src="../../assets/APLogo-20-20.png" alt="logoArgetinaPrograma">
+
